# openalpr-android-libs

./: .gitignore  build_openalpr_android.sh
openalpr/src/: CMakeLists.txt
openalpr/src/misc_utilities/: CMakeLists.txt
tess2/: local.properties
tess2/tesseract4android/src/main/cpp/: CMakeLists.txt
